Lots of patches, end of async branch
* Made Demoness Pathway's some abilities use async schedulers
* Fixed name of the package with abilities
* Fixed bug, when cauldron expected SOUL_FIRE instead of SOUL_CAMPFIRE
* Fixed bug, when acting was reset on each restart. Made it save each time server is turned off, as well as spirituality
* Fixed bug, when suppls in Recipe were presented as plain Material name